--- a/invoice.tex
+++ b/invoice.tex
@@ -49,9 +49,9 @@ Client's Email
 \begin{itemize}
     \item Checks can be written and mailed to the following address:
 
-    Joseph Kerkhof
-
-    [Address]
+    Joseph Kerkhof \\
+    [Address] \\
+    [City, ST ZIP]
 
     \item If you have any questions or concerns regarding this invoice, please contact me at \href{mailto:joseph@kerkhof.dev}{joseph@kerkhof.dev}.
 \end{itemize}
