fix: compile errors

--- a/invoice.tex
+++ b/invoice.tex
@@ -50,8 +50,8 @@ Client's Email
     \item Checks can be written and mailed to the following address:
 
     Joseph Kerkhof \\
-    [Address] \\
-    [City, ST ZIP]
+    Address \\
+    City, ST ZIP
 
     \item If you have any questions or concerns regarding this invoice, please contact me at \href{mailto:joseph@kerkhof.dev}{joseph@kerkhof.dev}.
 \end{itemize}
